--- a/TeacherPanel/ExamResultManagement.ui
+++ b/TeacherPanel/ExamResultManagement.ui
@@ -6,130 +6,456 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
-    <height>600</height>
+    <width>766</width>
+    <height>632</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Exam Result Management</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
-      <string>Exam Result Entry</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="studentIdInput"/>
-      </item>
-      <item row="1" column="2">
-       <widget class="QLabel" name="labelSubject">
-        <property name="text">
-         <string>Subject:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="marksInput"/>
-      </item>
-      <item row="0" column="3">
-       <widget class="QLineEdit" name="studentNameInput"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="labelClass">
-        <property name="text">
-         <string>Class:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QLabel" name="labelStudentName">
-        <property name="text">
-         <string>Student Name:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="classInput"/>
-      </item>
-      <item row="3" column="0" colspan="4">
-       <layout class="QHBoxLayout" name="horizontalLayoutButtons">
-        <item>
-         <widget class="QPushButton" name="saveButton">
-          <property name="text">
-           <string>Save</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="updateButton">
-          <property name="text">
-           <string>Update</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="clearButton">
-          <property name="text">
-           <string>Clear</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelStudentId">
-        <property name="text">
-         <string>Student ID:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QLineEdit" name="subjectInput"/>
-      </item>
-      <item row="2" column="3">
-       <widget class="QLineEdit" name="totalmarksInput"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="labelMarks">
-        <property name="text">
-         <string>Marks:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
-       <widget class="QLabel" name="labelTotalMarks">
-        <property name="text">
-         <string>Total Marks</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayoutSearch">
-     <item>
-      <widget class="QLineEdit" name="searchInput">
-       <property name="placeholderText">
-        <string>Enter Student ID or Name to search</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="searchButton">
-       <property name="text">
-        <string>Search</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QTableView" name="tableViewResults"/>
-   </item>
-  </layout>
+  <property name="styleSheet">
+   <string notr="true">QDialog#ExamResultManagement {
+        background-color: #fef6f0   ;
+        border: 1px solid black;
+        border-radius: 10%;
+}</string>
+  </property>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>741</width>
+     <height>161</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Exam Result Entry</string>
+   </property>
+   <widget class="QLineEdit" name="studentIdInput">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>40</y>
+      <width>161</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#studentIdInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelSubject">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>70</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#labelSubject {
+        font-size: 16px;
+        color: #2c3e50 ;
+}</string>
+    </property>
+    <property name="text">
+     <string>Subject</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="marksInput">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>100</y>
+      <width>161</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#marksInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="studentNameInput">
+    <property name="geometry">
+     <rect>
+      <x>562</x>
+      <y>40</y>
+      <width>171</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#studentNameInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelClass">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#labelClass {
+        font-size: 16px;
+        color: #2c3e50 ;
+}</string>
+    </property>
+    <property name="text">
+     <string>Class</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelStudentName">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>30</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#labelStudentName {
+        font-size: 16px;
+        color: #2c3e50 ;
+}</string>
+    </property>
+    <property name="text">
+     <string>Student Name</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="classInput">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>70</y>
+      <width>161</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#classInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelStudentId">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>40</y>
+      <width>58</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#labelStudentId {
+        font-size: 16px;
+        color: #2c3e50 ;
+}</string>
+    </property>
+    <property name="text">
+     <string>Student ID:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="subjectInput">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>70</y>
+      <width>171</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#subjectInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="totalmarksInput">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>100</y>
+      <width>171</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit#totalmarksInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelMarks">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>90</y>
+      <width>51</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#labelMarks {
+        font-size: 16px;
+        color: #2c3e50 ;
+}</string>
+    </property>
+    <property name="text">
+     <string>Marks</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelTotalMarks">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>90</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#labelTotalMarks {
+        font-size: 16px;
+        color: #2c3e50 ;
+}</string>
+    </property>
+    <property name="text">
+     <string>Total Marks</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="clearButton">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>130</y>
+      <width>206</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton#clearButton {
+    background-color: #ff6b6b;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    padding: 6px;
+    font-size: 16px;
+}
+
+/* Hover effect */
+QPushButton#loginButton:hover {
+    background-color: #ee5253;
+}
+
+font: 9pt &quot;Segoe UI&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Clear</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="updateButton">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>130</y>
+      <width>205</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton#updateButton {
+    background-color: #ff6b6b;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    padding: 6px;
+    font-size: 16px;
+}
+
+/* Hover effect */
+QPushButton#loginButton:hover {
+    background-color: #ee5253;
+}
+
+font: 9pt &quot;Segoe UI&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Update</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="saveButton">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>130</y>
+      <width>206</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton#saveButton {
+    background-color: #ff6b6b;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    padding: 6px;
+    font-size: 16px;
+}
+
+/* Hover effect */
+QPushButton#loginButton:hover {
+    background-color: #ee5253;
+}
+
+font: 9pt &quot;Segoe UI&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QTableView" name="tableViewResults">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>230</y>
+     <width>741</width>
+     <height>391</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTableView#tableViewResults {
+    border: 1.5px solid #2c3e50;
+    border-radius: 8px;
+    background-color: #ffffff;
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 11pt;
+    color: #2c3e50;
+    gridline-color: #ecf0f1;
+    alternate-background-color: #f7f9fa;
+    selection-background-color: #d6eaf8;
+    selection-color: #1a252f;
+}
+
+QHeaderView::section {
+    background-color: #2c3e50;
+    color: white;
+    font-weight: bold;
+    font-size: 11pt;
+    padding: 6px;
+    border: none;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+QTableView QTableCornerButton::section {
+    background-color: #2c3e50;
+    border: none;
+}
+
+QTableView::item {
+    padding: 8px 10px;
+    font-size: 9pt;
+}
+
+QTableView::item:selected {
+    background-color: #d6eaf8;
+    color: #1a252f;
+}
+</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="searchInput">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>180</y>
+     <width>621</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLineEdit#searchInput {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+   </property>
+   <property name="placeholderText">
+    <string>Enter Student ID or Name to search</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="searchButton">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>180</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton#searchButton {
+    background-color: #ff6b6b;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    padding: 6px;
+    font-size: 16px;
+}
+
+/* Hover effect */
+QPushButton#loginButton:hover {
+    background-color: #ee5253;
+}
+
+</string>
+   </property>
+   <property name="text">
+    <string>Search</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
