--- a/TeacherPanel/TeacherExamManagement.ui
+++ b/TeacherPanel/TeacherExamManagement.ui
@@ -7,31 +7,121 @@
     <x>0</x>
     <y>0</y>
     <width>600</width>
-    <height>400</height>
+    <height>448</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Assigned Exams</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QLineEdit" name="searchBar">
-     <property name="placeholderText">
-      <string>Search Exam...</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QTableView" name="examTable"/>
-   </item>
-   <item>
-    <widget class="QPushButton" name="closeButton">
-     <property name="text">
-      <string>Close</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+  <property name="styleSheet">
+   <string notr="true">QDialog#TeacherExamManagement {
+        background-color: #fef6f0   ;
+        border: 1px solid black;
+        border-radius: 10%;
+}</string>
+  </property>
+  <widget class="QLineEdit" name="searchBar">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>21</y>
+     <width>581</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLineEdit#searchBar {
+    color: black;;
+    border: 1.5px solid black;;
+    border-radius: 10px;
+        font-size: 16px;
+        padding: 0px 8px 0px 8px;
+}
+</string>
+   </property>
+   <property name="placeholderText">
+    <string>Search Exam...</string>
+   </property>
+  </widget>
+  <widget class="QTableView" name="examTable">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>60</y>
+     <width>581</width>
+     <height>331</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTableView#examTable {
+    border: 1.5px solid #2c3e50;
+    border-radius: 8px;
+    background-color: #ffffff;
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 11pt;
+    color: #2c3e50;
+    gridline-color: #ecf0f1;
+    alternate-background-color: #f7f9fa;
+    selection-background-color: #d6eaf8;
+    selection-color: #1a252f;
+}
+
+QHeaderView::section {
+    background-color: #2c3e50;
+    color: white;
+    font-weight: bold;
+    font-size: 11pt;
+    padding: 6px;
+    border: none;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+QTableView QTableCornerButton::section {
+    background-color: #2c3e50;
+    border: none;
+}
+
+QTableView::item {
+    padding: 8px 10px;
+    font-size: 9pt;
+}
+
+QTableView::item:selected {
+    background-color: #d6eaf8;
+    color: #1a252f;
+}
+</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="closeButton">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>400</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton#closeButton {
+    background-color: #ff6b6b;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    padding: 6px;
+    font-size: 16px;
+}
+
+/* Hover effect */
+QPushButton#closeButton:hover {
+    background-color: #ee5253;
+}
+
+</string>
+   </property>
+   <property name="text">
+    <string>Close</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
