--- a/Login.ui
+++ b/Login.ui
@@ -138,7 +138,6 @@
    <string notr="true">QDialog#Login {
         background-color: #fef6f0   ;
         border: 1px solid black;
-        border-radius: 10%;
 }</string>
   </property>
   <widget class="QLabel" name="label">
@@ -323,35 +322,29 @@ QPushButton#loginButton:hover {
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>0</y>
-     <width>491</width>
-     <height>521</height>
+     <x>458</x>
+     <y>-10</y>
+     <width>501</width>
+     <height>541</height>
     </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#label_2 {
-		border: 0.4px solid black;
-        border-radius: 10%;
+    border: 1px solid black; /* Use 'solid' for a visible border */
+    border-top-left-radius: 10%;
+    border-bottom-left-radius: 10%;
+    border-top-right-radius: 10%;
+    border-bottom-right-radius: 10%;
 }</string>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Shape::NoFrame</enum>
    </property>
    <property name="text">
     <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../../03ca7cd8-d889-4960-9cf5-8d4bd6616c83.png</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-   <property name="wordWrap">
-    <bool>false</bool>
-   </property>
-   <property name="indent">
-    <number>-1</number>
    </property>
   </widget>
  </widget>
