--- a/StudentPanel/StudentAttendance.ui
+++ b/StudentPanel/StudentAttendance.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
+    <width>261</width>
     <height>400</height>
    </rect>
   </property>
@@ -23,8 +23,8 @@
   <widget class="QLabel" name="titleLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>0</y>
+     <x>-100</x>
+     <y>10</y>
      <width>461</width>
      <height>41</height>
     </rect>
@@ -42,23 +42,23 @@ color: #2c3e50 ;
 }</string>
    </property>
    <property name="text">
-    <string>My Attendance Record</string>
+    <string>Attendance Record</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QTableWidget" name="tableWidget_2">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>41</y>
-     <width>461</width>
-     <height>351</height>
+     <x>10</x>
+     <y>60</y>
+     <width>241</width>
+     <height>321</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QTableView#tableWidget {
+    <string notr="true">QTableWidget#tableWidget_2 {
     border: 1.5px solid #2c3e50;
     border-radius: 8px;
     background-color: #ffffff;
@@ -97,20 +97,16 @@ QTableWidget::item:selected {
 }
 </string>
    </property>
-   <property name="rowCount">
-    <number>0</number>
-   </property>
-   <property name="columnCount">
-    <number>2</number>
-   </property>
-   <property name="horizontalHeaderLabels" stdset="0">
-    <stringlist>
+   <column>
+    <property name="text">
      <string>Date</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
      <string>Status</string>
-    </stringlist>
-   </property>
-   <column/>
-   <column/>
+    </property>
+   </column>
   </widget>
  </widget>
  <resources/>
