--- a/StudentPanel/StudentSchedule.ui
+++ b/StudentPanel/StudentSchedule.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>650</width>
+    <width>643</width>
     <height>400</height>
    </rect>
   </property>
@@ -23,7 +23,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>80</x>
      <y>9</y>
      <width>481</width>
      <height>26</height>
@@ -51,10 +51,10 @@ color: #2c3e50 ;
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>41</y>
-     <width>631</width>
-     <height>341</height>
+     <x>10</x>
+     <y>40</y>
+     <width>621</width>
+     <height>351</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -97,28 +97,36 @@ QTableWidget::item:selected {
 }
 </string>
    </property>
-   <property name="rowCount">
-    <number>0</number>
-   </property>
-   <property name="columnCount">
-    <number>6</number>
-   </property>
-   <property name="horizontalHeaderLabels" stdset="0">
-    <stringlist>
+   <column>
+    <property name="text">
      <string>Teacher Name</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
      <string>Subject</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
      <string>Day</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
      <string>Start Time</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
      <string>End Time</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
      <string>Room</string>
-    </stringlist>
-   </property>
-   <column/>
-   <column/>
-   <column/>
-   <column/>
-   <column/>
-   <column/>
+    </property>
+   </column>
   </widget>
  </widget>
  <resources/>
